--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,10 @@ dependencies:
   http: ^0.13.1
   flutter_riverpod: ^0.13.1+1
   path_provider: ^2.0.1
-  json_serializable: ^4.1.0
+  json_serializable: ^4.0.0
   json_annotation: ^4.0.1
   curved_navigation_bar: ^0.3.7
+  flutter_svg: ^0.19.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,7 +38,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.12.2
+  build_runner: ^1.11.0
+
 
 
 # For information on the generic Dart part of this file, see the
