--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,27 +18,27 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.1
-  flutter_riverpod: ^0.13.1+1
-  path_provider: ^2.0.1
-  json_serializable: ^4.0.0
-  json_annotation: ^4.0.1
-  curved_navigation_bar: ^0.3.7
-  flutter_svg: ^0.19.3
+  http:
+  flutter_riverpod:
+  path_provider:
+  json_serializable:
+  json_annotation:
+  curved_navigation_bar:
+  flutter_svg:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.11.0
+  build_runner:
 
 
 
